--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,23 +34,10 @@
             android:text="@string/displaynameProfile"
             android:textColor="@color/white"
             android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/emailTtl"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintBottom_toTopOf="@+id/emailTtl"/>
-
-        <TextView
-            android:id="@+id/displayNameVw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/empty"
-            android:textColor="@color/lightgray"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/changeDisplaynameButton"
@@ -58,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="16dp"
             android:text="@string/change"
             android:textColor="@color/teal_700"
             app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
@@ -66,23 +53,24 @@
             app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
             app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <TextView
+            android:id="@+id/displayNameVw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/emailTtl"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl"
-            app:layout_constraintVertical_bias="0.717"
-            app:srcCompat="@drawable/div"
-            android:contentDescription="@string/empty" />
+            android:layout_marginTop="20dp"
+            android:text="@string/empty"
+            android:textColor="@color/lightgray"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
+            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
 
         <TextView
             android:id="@+id/emailTtl"
             android:layout_width="210dp"
             android:layout_height="25dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="72dp"
             android:text="@string/emailAddressProfile"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -90,24 +78,23 @@
             app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
 
-        <TextView
-            android:id="@+id/emailVw"
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/empty"
-            android:textColor="@color/lightgray"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/emailTtl"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/emailTtl"
-            app:layout_constraintTop_toBottomOf="@+id/emailTtl" />
+            android:contentDescription="@string/empty"
+            app:layout_constraintBottom_toTopOf="@+id/emailTtl"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl"
+            app:layout_constraintVertical_bias="0.788"
+            app:srcCompat="@drawable/div" />
 
         <TextView
             android:id="@+id/changeEmailButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="8dp"
             android:text="@string/change"
             android:textColor="@color/teal_700"
             app:layout_constraintEnd_toEndOf="@+id/emailTtl"
@@ -123,9 +110,9 @@
             android:autofillHints=" "
             android:background="@drawable/input_fields"
             android:ems="10"
-            android:maxLength="16"
             android:hint="@string/new_username"
             android:inputType="text"
+            android:maxLength="16"
             android:paddingHorizontal="5dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -133,7 +120,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/emailVw"
             app:layout_constraintTop_toBottomOf="@+id/emailTtl"
-            app:layout_constraintVertical_bias="0.019" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/editEmailField"
@@ -143,9 +130,9 @@
             android:autofillHints=" "
             android:background="@drawable/input_fields"
             android:ems="10"
-            android:maxLength="32"
             android:hint="@string/new_e_mail"
             android:inputType="textEmailAddress"
+            android:maxLength="32"
             android:paddingHorizontal="5dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -153,7 +140,36 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/emailVw"
             app:layout_constraintTop_toBottomOf="@+id/emailTtl"
-            app:layout_constraintVertical_bias="0.019" />
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/emailVw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/empty"
+            android:textColor="@color/lightgray"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/emailTtl"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/emailTtl"
+            app:layout_constraintTop_toBottomOf="@+id/emailTtl" />
+
+        <ImageButton
+            android:id="@+id/logoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/empty"
+            app:layout_constraintBottom_toBottomOf="@+id/displayNameTtl"
+            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
+            app:layout_constraintTop_toTopOf="@+id/displayNameTtl"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/baseline_logout_24"
+            tools:targetApi="lollipop" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
