--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="crimson">#DC143C</color>
-    <color name="darkgray">#3e3e3e</color>
+    <color name="darkgray">#2a2a2a</color>
     <color name="lightgray">#adadad</color>
     <color name="customGreen">#589100</color>
     <color name="red">#ff0000</color>
