--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,172 +4,121 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/darkgray"
     android:fillViewport="true"
     android:visibility="visible"
     android:id="@+id/scrollView"
-    tools:context=".Profile">
+    tools:context=".Profile"
+    tools:targetApi="lollipop">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="306dp"
-            android:layout_height="661dp"
+            android:id="@+id/displayname_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:contentDescription="@string/empty"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.170"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/block_profile" />
+            app:layout_constraintVertical_bias="0.375"
+            app:srcCompat="@drawable/baseline_account_circle_24" />
 
-        <TextView
-            android:id="@+id/displayNameTtl"
-            android:layout_width="210dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="276dp"
-            android:text="@string/displaynameProfile"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/emailTtl"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-        <TextView
-            android:id="@+id/changeDisplaynameButton"
+        <EditText
+            android:id="@+id/displayname_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/change"
-            android:textColor="@color/teal_700"
-            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
-
-        <TextView
-            android:id="@+id/displayNameVw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:autofillHints=" "
+            android:background="@android:color/transparent"
+            android:enabled="false"
+            android:hint="@string/empty"
+            android:inputType="text"
+            android:cursorVisible="true"
             android:text="@string/empty"
             android:textColor="@color/lightgray"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
-
-        <TextView
-            android:id="@+id/emailTtl"
-            android:layout_width="210dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="72dp"
-            android:text="@string/emailAddressProfile"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl" />
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/displayname_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.375" />
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/email_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:contentDescription="@string/empty"
-            app:layout_constraintBottom_toTopOf="@+id/emailTtl"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/displayNameTtl"
-            app:layout_constraintVertical_bias="0.788"
-            app:srcCompat="@drawable/div" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.170"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.45"
+            app:srcCompat="@drawable/baseline_email_24" />
 
-        <TextView
-            android:id="@+id/changeEmailButton"
+        <EditText
+            android:id="@+id/email_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/change"
-            android:textColor="@color/teal_700"
-            app:layout_constraintEnd_toEndOf="@+id/emailTtl"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/emailTtl"
-            app:layout_constraintTop_toBottomOf="@+id/emailTtl" />
-
-        <EditText
-            android:id="@+id/editUsernameField"
-            android:layout_width="210dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:autofillHints=" "
-            android:background="@drawable/input_fields"
-            android:ems="10"
-            android:hint="@string/new_username"
-            android:inputType="text"
-            android:maxLength="16"
-            android:paddingHorizontal="5dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/changeEmailButton"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/emailVw"
-            app:layout_constraintTop_toBottomOf="@+id/emailTtl"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <EditText
-            android:id="@+id/editEmailField"
-            android:layout_width="210dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="32dp"
-            android:autofillHints=" "
-            android:background="@drawable/input_fields"
-            android:ems="10"
-            android:hint="@string/new_e_mail"
+            android:background="@android:color/transparent"
+            android:cursorVisible="true"
+            android:enabled="false"
+            android:hint="@string/empty"
             android:inputType="textEmailAddress"
-            android:maxLength="32"
-            android:paddingHorizontal="5dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/changeEmailButton"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/emailVw"
-            app:layout_constraintTop_toBottomOf="@+id/emailTtl"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/emailVw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:scrollbars="horizontal"
             android:text="@string/empty"
             android:textColor="@color/lightgray"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/emailTtl"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/emailTtl"
-            app:layout_constraintTop_toBottomOf="@+id/emailTtl" />
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/email_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.45" />
 
-        <ImageButton
-            android:id="@+id/logoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/empty"
-            app:layout_constraintBottom_toBottomOf="@+id/displayNameTtl"
-            app:layout_constraintEnd_toEndOf="@+id/displayNameTtl"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/displayNameTtl"
-            app:layout_constraintTop_toTopOf="@+id/displayNameTtl"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/baseline_logout_24"
-            tools:targetApi="lollipop" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="100dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="90dp"
+            android:layout_marginRight="90dp"
+            android:layout_marginBottom="275dp"
+            android:backgroundTint="@color/red"
+            android:text="@string/log_out"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/edit_save_profile_button"
+            app:layout_constraintTop_toBottomOf="@+id/email_view"
+            app:layout_constraintVertical_bias="0.112" />
+
+        <Button
+            android:id="@+id/edit_save_profile_button"
+            android:layout_width="100dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="275dp"
+            android:backgroundTint="@color/customGreen"
+            android:text="@string/edit"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_view"
+            app:layout_constraintVertical_bias="0.112" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
