--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,13 +16,25 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="355dp"
+            android:layout_height="584dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/block_profile" />
+
+        <ImageView
             android:id="@+id/displayname_icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:contentDescription="@string/empty"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.170"
+            app:layout_constraintHorizontal_bias="0.210"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.375"
@@ -36,10 +48,10 @@
             android:layout_marginLeft="8dp"
             android:autofillHints=" "
             android:background="@android:color/transparent"
+            android:cursorVisible="true"
             android:enabled="false"
             android:hint="@string/empty"
             android:inputType="text"
-            android:cursorVisible="true"
             android:text="@string/empty"
             android:textColor="@color/lightgray"
             android:textSize="16sp"
@@ -55,7 +67,7 @@
             android:contentDescription="@string/empty"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.170"
+            app:layout_constraintHorizontal_bias="0.210"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.45"
@@ -86,11 +98,11 @@
             android:id="@+id/button2"
             android:layout_width="100dp"
             android:layout_height="38dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="90dp"
-            android:layout_marginRight="90dp"
+            android:layout_marginEnd="88dp"
+            android:layout_marginRight="88dp"
             android:layout_marginBottom="275dp"
             android:backgroundTint="@color/red"
             android:text="@string/log_out"
@@ -105,11 +117,11 @@
             android:id="@+id/edit_save_profile_button"
             android:layout_width="100dp"
             android:layout_height="38dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginStart="88dp"
+            android:layout_marginLeft="88dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="275dp"
             android:backgroundTint="@color/customGreen"
             android:text="@string/edit"
