--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,124 +8,105 @@
     android:background="@color/darkgray"
     app:layout_constraintVertical_chainStyle="packed">
 
-    <ImageView
-        android:id="@+id/displayname_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/empty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.208"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391"
-        app:srcCompat="@drawable/baseline_account_circle_24" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <EditText
-        android:id="@+id/displaynameEt"
-        android:layout_width="175dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:autofillHints=" "
-        android:background="@android:color/transparent"
-        android:cursorVisible="true"
-        android:enabled="false"
-        android:hint="@string/empty"
-        android:inputType="text"
-        android:text="@string/empty"
-        android:textColor="@color/lightgray"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/displayname_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
-    <ImageView
-        android:id="@+id/email_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/empty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.208"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.466"
-        app:srcCompat="@drawable/baseline_email_24" />
+            <ImageView
+                android:id="@+id/profilePictureVw"
+                android:layout_marginTop="225dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars"
+                android:contentDescription="@string/empty" />
 
-    <EditText
-        android:id="@+id/emailEtProfile"
-        android:layout_width="175dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:autofillHints=" "
-        android:background="@android:color/transparent"
-        android:cursorVisible="true"
-        android:enabled="false"
-        android:hint="@string/empty"
-        android:inputType="textEmailAddress"
-        android:scrollbars="horizontal"
-        android:text="@string/empty"
-        android:textColor="@color/lightgray"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/email_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+            <EditText
+                android:id="@+id/displaynameEt"
+                android:layout_width="225dp"
+                android:layout_marginTop="15dp"
+                android:drawablePadding="8dp"
+                android:layout_height="32dp"
+                android:autofillHints=" "
+                android:background="@android:color/transparent"
+                android:cursorVisible="true"
+                android:drawableStart="@drawable/baseline_account_circle_24"
+                android:drawableLeft="@drawable/baseline_account_circle_24"
+                android:enabled="false"
+                android:hint="@string/empty"
+                android:inputType="text"
+                android:text="@string/empty"
+                android:textColor="@color/lightgray"
+                android:textSize="16sp" />
 
-    <ImageView
-        android:id="@+id/divider_four"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:contentDescription="@string/empty"
-        android:paddingBottom="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEtProfile"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/div" />
+            <EditText
+                android:id="@+id/emailEtProfile"
+                android:layout_width="225dp"
+                android:layout_height="32dp"
+                android:autofillHints=" "
+                android:drawablePadding="8dp"
+                android:background="@android:color/transparent"
+                android:cursorVisible="true"
+                android:drawableLeft="@drawable/baseline_email_24"
+                android:enabled="false"
+                android:hint="@string/empty"
+                android:inputType="textEmailAddress"
+                android:scrollbars="horizontal"
+                android:text="@string/empty"
+                android:textColor="@color/lightgray"
+                android:textSize="16sp"
+                android:drawableStart="@drawable/baseline_email_24" />
 
-    <Button
-        android:id="@+id/editProfileBtn"
-        android:layout_width="100dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="275dp"
-        android:backgroundTint="@color/customGreen"
-        android:text="@string/edit"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/logoutBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider_four"
-        app:layout_constraintVertical_bias="0.178"
-        tools:targetApi="lollipop" />
+            <ImageView
+                android:id="@+id/divider_four"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/empty"
+                app:srcCompat="@drawable/div" />
 
-    <Button
-        android:id="@+id/logoutBtn"
-        android:layout_width="100dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginRight="88dp"
-        android:layout_marginBottom="275dp"
-        android:backgroundTint="@color/red"
-        android:text="@string/log_out"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/editProfileBtn"
-        app:layout_constraintTop_toBottomOf="@+id/divider_four"
-        app:layout_constraintVertical_bias="0.178"
-        tools:targetApi="lollipop" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/editProfileBtn"
+                    android:layout_width="92dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/green_btn"
+                    android:text="@string/edit"
+                    android:textSize="12sp"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/white"
+                    tools:targetApi="lollipop"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_marginEnd="5dp" />
+
+                <Button
+                    android:id="@+id/logoutBtn"
+                    android:layout_width="92dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="12sp"
+
+                    android:background="@drawable/red_btn"
+                    android:text="@string/log_out"
+                    android:textColor="@color/white"
+                    tools:targetApi="lollipop"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_marginStart="5dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
