--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="crimson">#DC143C</color>
     <color name="darkgray">#232323</color>
     <color name="lightgray">#adadad</color>
+    <color name="customGreen2">#4f8200</color>
     <color name="customGreen">#589100</color>
     <color name="red">#ff3232</color>
 </resources>
