--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/profilePictureVw"
                 android:layout_marginTop="200dp"
                 android:layout_width="150dp"
