--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -73,10 +73,11 @@
                 android:textSize="18sp" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/divSix"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/div" />
+                app:srcCompat="@drawable/div"
+                android:contentDescription="@string/empty" />
 
             <Button
                 android:id="@+id/signInBtn"
