Small design changes

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/editTextTextUsername"
                 android:layout_width="210dp"
                 android:layout_height="35dp"
+                android:paddingHorizontal="3dp"
                 android:layout_marginTop="255dp"
                 android:ems="10"
                 android:background="@drawable/input_fields"
@@ -40,6 +41,7 @@
                 android:layout_width="210dp"
                 android:layout_height="35dp"
                 android:ems="10"
+                android:paddingHorizontal="3dp"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:drawablePadding="5dp"
                 android:layout_marginTop="15dp"
@@ -57,6 +59,7 @@
                 android:layout_height="35dp"
                 android:background="@drawable/input_fields"
                 android:ems="10"
+                android:paddingHorizontal="3dp"
                 android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                 android:drawablePadding="5dp"
                 android:layout_marginTop="15dp"
