--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,105 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background" >
+    android:background="@drawable/background"
+
+    >
 
     <ScrollView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        app:layout_constraintVertical_chainStyle="spread">
+
+        >
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+
+            >
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="64sp"
+                android:gravity="center_horizontal"
+
+                />
 
             <ImageView
-                android:id="@+id/logoIv"
 
-                android:layout_width="240dp"
-                android:layout_height="60dp"
-
-                android:layout_marginTop="255dp"
-
-                android:contentDescription="@string/empty"
-
-                app:srcCompat="@drawable/logo" />
-
-            <ImageView
                 android:id="@+id/dividerOne"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_marginTop="20dp"
-
+                android:layout_marginTop="15dp"
                 android:contentDescription="@string/empty"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/div"
 
-                app:srcCompat="@drawable/div" />
+                />
 
             <Button
-                android:id="@+id/signInButton"
 
+                android:id="@+id/signInButton"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
-
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="5dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/green_btn"
-
                 android:text="@string/sign_in"
-
                 android:textColor="@color/white"
 
                 />
 
             <Button
-                android:id="@+id/signUpButton"
 
+                android:id="@+id/signUpButton"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
-
-                android:layout_marginBottom="20dp"
-
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/green_btn"
-
                 android:text="@string/sign_up"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+
+                />
 
             <ImageView
-                android:id="@+id/imageView3"
 
+                android:id="@+id/imageView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_marginBottom="4dp"
-
+                android:layout_marginTop="15dp"
                 app:srcCompat="@drawable/div"
-                android:contentDescription="@string/empty" />
+                android:contentDescription="@string/empty"
+
+                />
 
             <TextView
-                android:id="@+id/textView"
 
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:gravity="center_horizontal"
                 android:textColor="@color/lightgray"
                 android:textSize="12sp"
-                android:text="@string/made_by_lukatjee" />
+                android:text="@string/made_by_lukatjee"
+
+                />
 
             <ProgressBar
+
                 android:id="@+id/progressBarOne"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:visibility="gone" />
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+
+                />
 
         </LinearLayout>
 
