--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,67 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkgray"
-    app:layout_constraintVertical_chainStyle="packed">
+    android:background="@drawable/background"
+    app:layout_constraintVertical_chainStyle="packed"
+
+    >
 
     <ScrollView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+
+        >
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
+
                 android:id="@+id/profilePictureVw"
-                android:layout_marginTop="200dp"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/img_border"
-                android:contentDescription="@string/empty" />
-
-            <ImageView
-                android:id="@+id/divider_five"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:contentDescription="@string/empty"
-                app:srcCompat="@drawable/div" />
+
+                />
 
             <EditText
+
                 android:id="@+id/displaynameEt"
                 android:layout_width="225dp"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="8dp"
+                android:layout_marginTop="15dp"
+                android:drawablePadding="5dp"
                 android:layout_height="32dp"
                 android:autofillHints=" "
-                android:background="@android:color/transparent"
+                android:paddingHorizontal="5dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/profile_fields"
                 android:cursorVisible="true"
                 android:drawableStart="@drawable/baseline_account_circle_24"
-                android:drawableLeft="@drawable/baseline_account_circle_24"
                 android:enabled="false"
                 android:hint="@string/empty"
                 android:inputType="text"
                 android:text="@string/empty"
                 android:textColor="@color/lightgray"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+
+                />
 
             <EditText
+
                 android:id="@+id/emailEtProfile"
                 android:layout_width="225dp"
                 android:layout_height="32dp"
                 android:autofillHints=" "
-                android:drawablePadding="8dp"
-                android:background="@android:color/transparent"
+                android:drawablePadding="5dp"
+                android:paddingHorizontal="5dp"
+                android:background="@drawable/profile_fields"
                 android:cursorVisible="true"
-                android:drawableLeft="@drawable/baseline_email_24"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
                 android:enabled="false"
                 android:hint="@string/empty"
                 android:inputType="textEmailAddress"
@@ -69,52 +79,71 @@
                 android:text="@string/empty"
                 android:textColor="@color/lightgray"
                 android:textSize="16sp"
-                android:drawableStart="@drawable/baseline_email_24" />
+                android:drawableStart="@drawable/baseline_email_24"
+
+                />
 
             <ImageView
+
                 android:id="@+id/divider_four"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center_horizontal"
                 android:contentDescription="@string/empty"
-                app:srcCompat="@drawable/div" />
+                app:srcCompat="@drawable/div"
+
+                />
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+
+                >
 
                 <Button
+
                     android:id="@+id/editProfileBtn"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="92dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp"
                     android:background="@drawable/green_btn"
                     android:text="@string/edit"
                     android:textColor="@color/white"
                     android:textSize="12sp"
-                    tools:targetApi="lollipop" />
+                    tools:targetApi="lollipop"
+
+                    />
 
                 <Button
+
                     android:id="@+id/logoutBtn"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="92dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="5dp"
-
-                    android:layout_marginLeft="5dp"
                     android:background="@drawable/red_btn"
                     android:text="@string/log_out"
                     android:textColor="@color/white"
                     android:textSize="12sp"
-                    tools:targetApi="lollipop" />
+
+                    />
+
             </LinearLayout>
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
