--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,49 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkgray"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@drawable/background"
+
+    >
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="50dp">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:gravity="center_vertical"
             android:orientation="vertical" >
 
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_in"
+                android:textColor="@color/white"
+                android:textSize="64sp"
+                android:gravity="center_horizontal"
+
+                />
+
+            <ImageView
+
+                android:id="@+id/dividerSeventeen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/div"
+                android:layout_marginTop="15dp"
+                android:contentDescription="@string/empty"
+
+                />
+
             <EditText
+
                 android:id="@+id/editTextTextUsername"
                 android:layout_width="210dp"
                 android:layout_height="35dp"
                 android:paddingHorizontal="5dp"
-                android:layout_marginTop="255dp"
                 android:ems="10"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/input_fields"
                 android:inputType="textPersonName"
                 android:textColorHint="@color/lightgray"
                 android:textSize="18sp"
-                android:drawableLeft="@drawable/baseline_account_circle_24"
                 android:drawablePadding="5dp"
+                android:layout_marginTop="15dp"
                 android:hint="@string/username"
                 android:autofillHints=" "
-                android:drawableStart="@drawable/baseline_account_circle_24" />
+                android:drawableStart="@drawable/baseline_account_circle_24"
+
+                />
 
             <EditText
+
                 android:id="@+id/editTextEmail"
                 android:layout_width="210dp"
                 android:layout_height="35dp"
                 android:ems="10"
                 android:paddingHorizontal="5dp"
-                android:drawableLeft="@drawable/baseline_email_24"
                 android:drawablePadding="5dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:textColorHint="@color/lightgray"
                 android:hint="@string/e_mail"
@@ -51,34 +78,43 @@
                 android:textSize="18sp"
                 android:background="@drawable/input_fields"
                 android:inputType="textEmailAddress"
-                android:drawableStart="@drawable/baseline_email_24" />
+                android:drawableStart="@drawable/baseline_email_24"
+
+                />
 
             <EditText
+
                 android:id="@+id/editTextPassword"
                 android:layout_width="210dp"
                 android:layout_height="35dp"
                 android:background="@drawable/input_fields"
                 android:ems="10"
                 android:paddingHorizontal="5dp"
-                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                 android:drawablePadding="5dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:textColorHint="@color/lightgray"
                 android:hint="@string/password"
                 android:autofillHints=" "
                 android:textSize="18sp"
                 android:inputType="textPassword"
-                android:drawableStart="@android:drawable/ic_lock_idle_lock" />
+                android:drawableStart="@android:drawable/ic_lock_idle_lock"
+
+                />
 
             <ImageView
+
                 android:id="@+id/dividerSeven"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/div"
                 android:layout_marginTop="15dp"
-                android:contentDescription="@string/empty" />
+                android:contentDescription="@string/empty"
+
+                />
 
             <Button
+
                 android:id="@+id/button"
                 android:layout_width="175dp"
                 android:layout_height="30dp"
@@ -87,7 +123,9 @@
                 android:background="@drawable/green_btn"
                 android:text="@string/sign_up"
                 android:textColor="@color/white"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+
+                />
 
         </LinearLayout>
 
